welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:40: error: value à is not a member of Int
	for(i <- 1 à 2) {
                   ^