welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
	faireMotifComplet();
}


/**
 * Permet de dessiner le motif suivant :
 * 		
 * 		-	X	X	-
 * 		X	-	-	X
 * 		X	- 	-	X
 * 		-	X	X	-
 * 	
 */
def faireMotifComplet() {
	faireMotif(Color.red, true);
	avance(2);
	faireMotif(Color.blue, false);
	recule(2);
	gauche();
	avance(2);
}

/**
 * Permet de dessiner le motif suivant :
 * 		
 * 		b	!b 
 * 		!b	b
 * 	
 * 	c:Color	: couleur du motif dessiné
 * 	b:Boolean	: cases colorier
 */
def faireMotif(c:Color, b:Boolean) {
	var i:Int = 0;
	setCouleurBrosse(c);
	if(b) {
		avance();
	}
	marqueSol();
	for(i <- 1 à 2) {
		gauche();
		avance();
	}
	if(b) {
		marqueSol();
	}
	gauche();
	avance();
	gauche();
}

def marqueSol() {
	baisseBrosse();
	leveBrosse();	
}
